--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,3 +47,11 @@ body {
 .h1-demo span {
 	color: #ffdd00;
 }
+
+#ooze {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	max-height: 396px;
+}
